# xpost

./: .gitignore  Cargo.toml  README.md  SETUP.md  STATS_USAGE.md  TEXT_EDITOR_FEATURES.md
src/: clipboard.rs  config.rs  drafts.rs  main.rs  stats_ui.rs  twitter.rs  ui.rs
