[package]
name = "xpost"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
toml = "0.8"
arboard = "3.4"
oauth1-request = "0.6"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
image = "0.25"
base64 = "0.22"
tui-textarea = "0.6"
chrono = { version = "0.4", features = ["serde"] }
